fixed alignment

--- a/Courses/Intro-To-WebDev/Fuller_Jaeden_Assignment_5/assets/style/homepage.css
+++ b/Courses/Intro-To-WebDev/Fuller_Jaeden_Assignment_5/assets/style/homepage.css
@@ -8,7 +8,7 @@
 header
 {
     background-color: #229dfa;
-    height: 75px;
+    height: 80px;
 }
 
 .row
@@ -25,7 +25,7 @@ header
 header h1
 {
     
-    line-height: 75px;
+    line-height: 80px;
     color: #fff;
     display: inline;
 }
